tests/variant-ambiguity/analyze.err
Error: Variant `red` is ambiguous: it could refer to `color` or `fruit`.

> 14|   if c is red {
                ^^^
tests/variant-ambiguity/main.pa:14:11
